test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_channel_output_binary.draco
channel output binary ch;

proc main()void: a := 1; corp;


