test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_nonrec_as_identifier.draco
int nonrec;
 
proc main() void : a := 1; corp;
